# landingpad

./: .gitignore  CMakeLists.txt  package.xml
2014-2015/charles_workspace/code/: CMakeLists.txt  CubicSpline.py  GoalReached.py  arrived_waypoint.cpp  conversions.h  package.xml  wavefront.cpp
2014-2015/control_panel/: CMakeLists.txt  README.rst  mainpage.dox  package.xml
2014-2015/hafiza_workspace/: AR_TAG.odt  CPandDR.odt  DocumentationEyeInTheSky.docx  ar_tag_info_readme  ar_tags.launch  drive_instructions  info_sheet.odt  landing_pad_cam.yaml  usb_cam.launch
2014-2015/led/: CMakeLists.txt  LED.h  Triangle.cpp
2014-2015/qr/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qr  qr.cpp  qr.cpp~
ANN/: ._bpnet.cc  ._bpnet.h  ._bpnet_check.cc  ._my_misc.cc  ._my_misc.h  bpnet_check.cc  my_misc.cc  my_misc.h
FinalFullDocument/: DesignDocument.tex  design.tex  designrefs.bib  environment_setup.tex  industrial.tex  log.tex  mission.tex  overview.tex  project.tex  prototypes.tex  refman.tex  requirements.tex  results.tex  seniordesignstyle.tex  sprint_2_report.tex  sprint_3_report.tex  sprint_5_report.tex  sprint_report_1.tex  sprint_report_2.tex  sprint_report_3.tex  sprint_report_4.tex  sprint_report_5.tex  sprints.tex  testing.tex  userdocs.tex
LaunchFiles/: firefly.launch  lander.launch  webcam.launch
cv_tracker/: CMakeLists.txt  calibrate
cv_tracker/inc/: Camera.h  Triangle.h
cv_tracker/sandbox/tutorials/: \  findthing.py  roughHoughnExample.py
cv_tracker/sandbox/tutorials/zbar/: README  install_zbar.sh
cv_tracker/src/: Camera.cpp  LED.cpp  calibrate.cpp  pytrack.py  threshold.cpp  tracker.cpp
flight_controller/: CMakeLists.txt  package.xml
src/: ai_sarsa.cpp  ai_sarsa_node.cpp
udev_rules/: 10-px4.rules
(+1330 files in other folders)
