cmake_minimum_required(VERSION 2.8)
list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS} -g -ftest-coverage -fprofile-arcs")
project( tracker  )
find_package( OpenCV REQUIRED )
add_library( LED LED.cpp )
add_library( Coord Coord.cpp )
add_library( Triangle Triangle.cpp )
add_library( Camera Camera.cpp )
add_executable( tracker tracker.cpp )
target_link_libraries( tracker ${OpenCV_LIBS} LED Coord Triangle Camera )
